Fix issues with external links

--- a/docs/tutorials/pauli-correlation-encoding-for-qaoa.ipynb
+++ b/docs/tutorials/pauli-correlation-encoding-for-qaoa.ipynb
@@ -127,8 +127,8 @@
     "\n",
     "### Max-Cut Problem\n",
     "The Max-Cut problem is a combinatorial optimization problem that is defined on a graph $G = (V, E)$, where $V$ is the set of vertices and $E$ is the set of edges. The goal is to partition the vertices into two sets, $S$ and $V \\setminus S$, such that the number of edges between the two sets is maximized.\n",
-    "For the detailed description of the Max-Cut problem, please refer to the [\"Solve utility-scale quantum optimization problems\"](https://learning.quantum.ibm.com/tutorial/quantum-approximate-optimization-algorithm) tutorial.\n",
-    "Also, the Max-Cut problem is used as an example in the tutorial [\"Advanced Techniques for QAOA\"](https://learning.quantum.ibm.com/tutorial/advanced-techniques-for-qaoa).\n",
+    "For the detailed description of the Max-Cut problem, please refer to the [\"Quantum approximate optimization algorithm\"](./quantum-approximate-optimization-algorithm) tutorial.\n",
+    "Also, the Max-Cut problem is used as an example in the tutorial [\"Advanced Techniques for QAOA\"](./advanced-techniques-for-qaoa).\n",
     "In those tutorials, the QAOA algorithm is used to solve the Max-Cut problem.\n",
     "\n",
     "\n",
