--- a/docs/tutorials/sample-based-krylov-quantum-diagonalization.ipynb
+++ b/docs/tutorials/sample-based-krylov-quantum-diagonalization.ipynb
@@ -432,7 +432,7 @@
    "id": "ce3e6a52-7b99-49b6-8294-b005efa59cfc",
    "metadata": {},
    "source": [
-    "Now, we transpile the circuits to the target backend using Qiskit."
+    "Now, we use Qiskit to transpile the circuits to the target backend."
    ]
   },
   {
