--- a/docs/tutorials/sample-based-krylov-quantum-diagonalization.ipynb
+++ b/docs/tutorials/sample-based-krylov-quantum-diagonalization.ipynb
@@ -240,7 +240,7 @@
     "For each spin species, the initial state $\\ket{\\psi_0}$ is given by the superposition of all possible excitations of the three electrons closest to the Fermi level into the 4 closest empty modes starting from the state $|00\\cdots 0011 \\cdots 11\\rangle$, and realized by the application of seven [XXPlusYYGate](docs/api/qiskit/qiskit.circuit.library.XXPlusYYGate)s.\n",
     "The time-evolved states are produced by successive applications of a second-order Trotter step.\n",
     "\n",
-    "For a more detailed description of this model and how the circuits are designed, please refer to [the paper](https://arxiv.org/abs/2501.09702)."
+    "For a more detailed description of this model and how the circuits are designed, refer to [\"Quantum-Centric Algorithm for Sample-Based Krylov Diagonalization\"](https://arxiv.org/abs/2501.09702)."
    ]
   },
   {
