--- a/docs/tutorials/sample-based-krylov-quantum-diagonalization.ipynb
+++ b/docs/tutorials/sample-based-krylov-quantum-diagonalization.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "In this tutorial, we show how to use sample-based quantum diagonalization (SQD) to estimate the ground state energy of a fermionic lattice model. Specifically, we study the one-dimensional single-impurity Anderson model (SIAM), which is used to describe magnetic impurities embedded in metals.\n",
     "\n",
-    "This tutorial follows a similar workflow to the related tutorial [*Improving energy estimation of a chemistry Hamiltonian with SQD*](/docs/tutorials/improving-energy-estimation-of-a-fermionic-hamiltonian-with-sqd). However, a key difference lies in how the quantum circuits are built. The other tutorial uses a heuristic variational ansatz, which is appealing for chemistry Hamiltonians with potentially millions of interaction terms. On the other hand, this tutorial uses circuits that approximate time evolution by the Hamiltonian. Such circuits can be deep, which makes this approach better for applications to lattice models. The state vectors prepared by these circuits form the basis for a [Krylov subspace](https://en.wikipedia.org/wiki/Krylov_subspace), and as a result, the algorithm provably and efficiently converges to the ground state, under suitable assumptions.\n",
+    "This tutorial follows a similar workflow to the related tutorial [Sample-based quantum diagonalization of a chemistry Hamiltonian](/docs/tutorials/sample-based-quantum-diagonalization). However, a key difference lies in how the quantum circuits are built. The other tutorial uses a heuristic variational ansatz, which is appealing for chemistry Hamiltonians with potentially millions of interaction terms. On the other hand, this tutorial uses circuits that approximate time evolution by the Hamiltonian. Such circuits can be deep, which makes this approach better for applications to lattice models. The state vectors prepared by these circuits form the basis for a [Krylov subspace](https://en.wikipedia.org/wiki/Krylov_subspace), and as a result, the algorithm provably and efficiently converges to the ground state, under suitable assumptions.\n",
     "\n",
     "The approach used in this tutorial can be viewed as a combination of the techniques used in SQD and [Krylov quantum diagonalization (KQD)](https://arxiv.org/abs/2407.14431). The combined approach is sometimes referred to as sample-based Krylov quantum diagonalization (SQKD). See [Krylov quantum diagonalization of lattice Hamiltonians](/docs/tutorials/krylov-quantum-diagonalization) for a tutorial on the KQD method.\n",
     "\n",
@@ -75,7 +75,7 @@
     "  e^{-i \\Delta t H} \\approx e^{-i\\frac{\\Delta t}{2} H_2} e^{-i\\Delta t H_1} e^{-i\\frac{\\Delta t}{2} H_2}.\n",
     "$$\n",
     "\n",
-    "Under the [Jordan-Wigner transformation](https://en.wikipedia.org/wiki/Jordan%E2%80%93Wigner_transformation), time evolution by $H_2$ amounts to a single [CPhase](docs/api/qiskit/qiskit.circuit.library.CPhaseGate) gate between the spin-up and spin-down orbitals at the impurity site. Because $H_1$ is a quadratic fermionic Hamiltonian, time evolution by $H_1$ amounts to an orbital rotation.\n",
+    "Under the [Jordan-Wigner transformation](https://en.wikipedia.org/wiki/Jordan%E2%80%93Wigner_transformation), time evolution by $H_2$ amounts to a single [CPhase](/docs/api/qiskit/qiskit.circuit.library.CPhaseGate) gate between the spin-up and spin-down orbitals at the impurity site. Because $H_1$ is a quadratic fermionic Hamiltonian, time evolution by $H_1$ amounts to an orbital rotation.\n",
     "\n",
     "The Krylov basis states $\\{ |\\psi_k\\rangle \\}_{k=0}^{D-1}$, where $D$ is the dimension of the Krylov subspace, are formed by repeated application of a single Trotter step, so\n",
     "\n",
@@ -237,7 +237,7 @@
    "metadata": {},
    "source": [
     "Next, we generate the circuits to produce the Krylov basis states.\n",
-    "For each spin species, the initial state $\\ket{\\psi_0}$ is given by the superposition of all possible excitations of the three electrons closest to the Fermi level into the 4 closest empty modes starting from the state $|00\\cdots 0011 \\cdots 11\\rangle$, and realized by the application of seven [XXPlusYYGate](docs/api/qiskit/qiskit.circuit.library.XXPlusYYGate)s.\n",
+    "For each spin species, the initial state $\\ket{\\psi_0}$ is given by the superposition of all possible excitations of the three electrons closest to the Fermi level into the 4 closest empty modes starting from the state $|00\\cdots 0011 \\cdots 11\\rangle$, and realized by the application of seven [XXPlusYYGate](/docs/api/qiskit/qiskit.circuit.library.XXPlusYYGate)s.\n",
     "The time-evolved states are produced by successive applications of a second-order Trotter step.\n",
     "\n",
     "For a more detailed description of this model and how the circuits are designed, refer to [\"Quantum-Centric Algorithm for Sample-Based Krylov Diagonalization\"](https://arxiv.org/abs/2501.09702)."
@@ -400,7 +400,7 @@
    "id": "a3304e1b-9c7c-4212-8744-d1c62292eced",
    "metadata": {},
    "source": [
-    "Now that we have created the circuits, we can optimize them for a target hardware. We pick the least busy QPU with at least 127 qubits. Check out the [Qiskit IBM Runtime docs](docs/guides/get-started-with-primitives#get-started-with-sampler) for more information."
+    "Now that we have created the circuits, we can optimize them for a target hardware. We pick the least busy QPU with at least 127 qubits. Check out the [Qiskit IBM Runtime docs](/docs/guides/get-started-with-primitives#get-started-with-sampler) for more information."
    ]
   },
   {
