Add SKQD tutorial (#3002)
Fixes #3003

---------

Co-authored-by: Jen Glick <41485571+jenglick@users.noreply.github.com>
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>
Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>

--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -24,6 +24,8 @@ The tutorials highlight techniques where repeated sampling enables estimation of
 
 * [Sample-based quantum diagonalization of a chemistry Hamiltonian](/docs/tutorials/sample-based-quantum-diagonalization)
 
+* [Improving energy estimation of a fermionic lattice model with SQD](/docs/tutorials/sample-based-krylov-quantum-diagonalization)
+
 * [Compute dissociation curves for strong coupling systems with QunaSys QSCI](/docs/tutorials/compute-dissociation-curves-for-strong-coupling-systems-with-quna-sys-qsci)
 
 * [Quantum approximate optimization algorithm](/docs/tutorials/quantum-approximate-optimization-algorithm)
