--- a/docs/tutorials/global-data-quantum-optimizer.ipynb
+++ b/docs/tutorials/global-data-quantum-optimizer.ipynb
@@ -444,7 +444,7 @@
     "dpo_result = dpo_job.result()\n",
     "\n",
     "# Convert metadata to a DataFrame, excluding 'session_id'\n",
-    "df = pd.DataFrame(dpo_result[\"metadata\"][\"all_postprocessed_samples\"])\n",
+    "df = pd.DataFrame(dpo_result[\"metadata\"][\"all_samples_metrics\"])\n",
     "\n",
     "# Find the minimum objective cost\n",
     "min_cost = df[\"objective_costs\"].min()\n",
@@ -456,9 +456,9 @@
     "# Display the results associated with the best solution\n",
     "print(\"Best Solution:\")\n",
     "print(f\"  - State: {best_row['states']}\")\n",
-    "print(f\"  - Restriction Deviation: {best_row['rest_breach']}%\")\n",
-    "print(f\"  - Sharpe Ratio: {best_row['sharpe_ratio']:.2f}\")\n",
-    "print(f\"  - Return: {best_row['return']:.2f}\")"
+    "print(f\"  - Restriction Deviation: {best_row['rest_breaches']}%\")\n",
+    "print(f\"  - Sharpe Ratio: {best_row['sharpe_ratios']:.2f}\")\n",
+    "print(f\"  - Return: {best_row['returns']:.2f}\")"
    ]
   },
   {
