add opt-lvl3 comment

--- a/docs/tutorials/real-time-benchmarking-for-qubit-selection.ipynb
+++ b/docs/tutorials/real-time-benchmarking-for-qubit-selection.ipynb
@@ -461,12 +461,12 @@
    "metadata": {},
    "source": [
     "###  Execute a quantum circuit with default qubit selection\n",
-    "As a reference result of performance, we'll take a look at an example of executing a quantum circuit on a QPU by using the default qubits, that is the qubits selected with the reported backend properties."
+    "As a reference result of performance, we'll take a look at an example of executing a quantum circuit on a QPU by using the default qubits, that is the qubits selected with the reported backend properties. `optimization_level = 3` setting for the transpiler includes the most advanced transpilation optimizations and the use of target properties (like operation errors) to select best performing qubits for execution.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5c0d09ad-2e6a-4067-8034-8df92a475ff1",
    "metadata": {},
    "outputs": [],
