--- a/docs/tutorials/multi-product-formula.ipynb
+++ b/docs/tutorials/multi-product-formula.ipynb
@@ -5,6 +5,8 @@
    "id": "9857bace",
    "metadata": {},
    "source": [
+    "{/* cspell:ignore Layerwise */}\n",
+    "{/* cspell:ignore markersize */}\n",
     "# Multi-product formula to reduce Trotter error"
    ]
   },
@@ -1860,7 +1862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "06e49110",
    "metadata": {},
    "outputs": [
@@ -1914,7 +1916,7 @@
     "from qiskit.quantum_info import SparsePauliOp, Pauli\n",
     "\n",
     "\n",
-    "# Genereate random coefficients for our XXZ Hamiltonian\n",
+    "# Generate random coefficients for our XXZ Hamiltonian\n",
     "np.random.seed(0)\n",
     "even_edges = list(coupling_map.get_edges())[::2]\n",
     "odd_edges = list(coupling_map.get_edges())[1::2]\n",
@@ -1992,7 +1994,7 @@
    "metadata": {},
    "source": [
     "#### Setting up the LSE\n",
-    "We'll look at the static MPF coefficients for this probelm"
+    "We'll look at the static MPF coefficients for this problem"
    ]
   },
   {
