--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -99,7 +99,7 @@ Workload optimization focuses on either efficient orchestration of classical and
 
 Addons enable advanced circuit manipulation, such as cutting, backpropagating observables, or approximating circuits, that allow users to sidestep hardware limitations at the cost of increased classical compute overhead.
 
-* [Multi-product formula to reduce Trotter error](/docs/tutorials/multi-product-formula)
+* [Multi-product formulas to reduce Trotter error](/docs/tutorials/multi-product-formula)
 
 * [Approximate quantum compilation for time evolution circuits](/docs/tutorials/approximate-quantum-compilation-for-time-evolution)
 
