--- a/docs/tutorials/real-time-benchmarking-for-qubit-selection.ipynb
+++ b/docs/tutorials/real-time-benchmarking-for-qubit-selection.ipynb
@@ -461,7 +461,7 @@
    "metadata": {},
    "source": [
     "###  Execute a quantum circuit with default qubit selection\n",
-    "As a reference result of performance, we'll take a look at an example of executing a quantum circuit on a QPU by using the default qubits, that is the qubits selected with the reported backend properties. `optimization_level = 3` setting for the transpiler includes the most advanced transpilation optimizations and the use of target properties (like operation errors) to select best performing qubits for execution.  "
+    "As a reference result of performance, we'll execute a quantum circuit on a QPU by using the default qubits, which are the qubits selected with the requested backend properties. We will use `optimization_level = 3`.  This setting includes the most advanced transpilation optimization, and uses target properties (like operation errors) to select the best performing qubits for execution.  "
    ]
   },
   {
