--- a/docs/guides/local-testing-mode.ipynb
+++ b/docs/guides/local-testing-mode.ipynb
@@ -224,9 +224,9 @@
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "    - Review detailed [primitives examples.](./primitives-examples)\n",
     "    - Read [Migrate to V2 primitives](/docs/migration-guides/v2-primitives).\n",
-    "    - Practice with primitives by working through the [Cost function lesson](https://learning.quantum.ibm.com/course/variational-algorithm-design/cost-functions#primitives) in IBM Quantum Learning.\n",
+    "    - Practice with primitives by working through the [Cost function lesson](/learning/courses/variational-algorithm-design/cost-functions) in IBM Quantum Learning.\n",
     "    - Learn how to transpile locally in the [Transpile](./transpile) section.\n",
-    "    - Try the [Submit pre-transpiled circuits](https://learning.quantum.ibm.com/tutorial/submitting-user-transpiled-circuits-using-primitives) tutorial.\n",
+    "    - Try the [Compare transpiler settings](/docs/tutorials/circuit-transpilation-settings#compare-transpiler-settings) tutorial.\n",
     "</Admonition>"
    ]
   }
