--- a/docs/guides/q-ctrl-optimization-solver.ipynb
+++ b/docs/guides/q-ctrl-optimization-solver.ipynb
@@ -610,7 +610,7 @@
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "\n",
     "- Request access to [Q-CTRL Optimization Solver.](https://quantum.ibm.com/functions?id=a8a2b0b6-486a-41b5-8ea4-ada3b108d6b6)\n",
-    "- Try the [Solve higher-order binary optimization problems with Q-CTRL's Optimization Solver](https://learning.quantum.ibm.com/tutorial/solve-higher-order-binary-optimization-problems-with-q-ctrls-optimization-solver) tutorial.\n",
+    "- Try the [Solve higher-order binary optimization problems with Q-CTRL's Optimization Solver](/docs/tutorials/solve-higher-order-binary-optimization-problems-with-q-ctrls-optimization-solver) tutorial.\n",
     "\n",
     "</Admonition>"
    ]
