--- a/docs/guides/synthesize-unitary-operators.ipynb
+++ b/docs/guides/synthesize-unitary-operators.ipynb
@@ -158,7 +158,7 @@
     "## Next steps\n",
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
-    "  -  See an example of circuit decomposition in the [Grover's Algorithm](https://learning.quantum.ibm.com/tutorial/grovers-algorithm) tutorial.\n",
+    "  -  See an example of circuit decomposition in the [Grover's Algorithm](/docs/tutorials/grovers-algorithm) tutorial.\n",
     "  -  For more information about the Qiskit transpiler, visit the [Transpile section](./transpile).\n",
     "</Admonition>"
    ]
