--- a/docs/guides/classical-feedforward-and-control-flow.ipynb
+++ b/docs/guides/classical-feedforward-and-control-flow.ipynb
@@ -402,7 +402,7 @@
     "## Next steps\n",
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
-    "-  See an example of dynamic circuits in the [Repeat until success](https://learning.quantum.ibm.com/tutorial/repeat-until-success) tutorial.\n",
+    "-  See an example of dynamic circuits in the [Repeat until success](/docs/tutorials/repeat-until-success) tutorial.\n",
     "- For considerations and limitations related to running dynamic circuits on quantum hardware, see the [Hardware considerations and limitations for classical feedforward and control flow](/docs/guides/dynamic-circuits-considerations) guide.\n",
     "-  Review the [circuit library API](/docs/api/qiskit/circuit_library) reference.\n",
     "</Admonition>"
