--- a/docs/guides/dynamical-decoupling-pass-manager.ipynb
+++ b/docs/guides/dynamical-decoupling-pass-manager.ipynb
@@ -285,7 +285,7 @@
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "    - To learn how to use the `generate_preset_passmanager` function instead of writing your own passes, start with the [Transpilation default settings and configuration options](defaults-and-configuration-options) topic.\n",
-    "    - Try the [Submit transpiled circuits](https://learning.quantum.ibm.com/tutorial/submit-transpiled-circuits) tutorial.\n",
+    "    - Try the [Compare transpiler settings](/docs/tutorials/circuit-transpilation-settings#compare-transpiler-settings) tutorial.\n",
     "    - See the [Transpile API documentation.](https://docs.quantum-computing.ibm.com/api/qiskit/transpiler)\n",
     "</Admonition>"
    ]
