--- a/docs/guides/execution-modes-rest-api.ipynb
+++ b/docs/guides/execution-modes-rest-api.ipynb
@@ -510,7 +510,7 @@
     "    - Review detailed [Sampler and Estimator](primitives-rest-api) primitives examples using REST API.\n",
     "    - Learn how to [transpile circuits using REST API](./transpile-rest-api).\n",
     "    - Read [Migrate to V2 primitives](/docs/migration-guides/v2-primitives).\n",
-    "    - Practice with primitives by working through the [Cost function lesson](https://learning.quantum.ibm.com/course/variational-algorithm-design/cost-functions#primitives) in IBM Quantum&reg; Learning.\n",
+    "    - Practice with primitives by working through the [Cost function lesson](/learning/courses/variational-algorithm-design/cost-functions) in IBM Quantum&reg; Learning.\n",
     "    - Learn how to transpile locally in the [Transpile](./transpile) section.\n",
     "</Admonition>"
    ]
