--- a/docs/guides/monitor-job.ipynb
+++ b/docs/guides/monitor-job.ipynb
@@ -322,7 +322,7 @@
     "## Next steps\n",
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
-    "    - Try the [Grover's algorithm](https://learning.quantum.ibm.com/tutorial/grovers-algorithm) tutorial.\n",
+    "    - Try the [Grover's algorithm](/docs/tutorials/grovers-algorithm) tutorial.\n",
     "    - [Migrate from qiskit_ibm_provider](/docs/migration-guides/qiskit-runtime-from-ibm-provider)\n",
     "</Admonition>"
    ]
