--- a/docs/guides/run-jobs-session.ipynb
+++ b/docs/guides/run-jobs-session.ipynb
@@ -476,7 +476,7 @@
     "## Next steps\n",
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
-    "  - Try an example in the [Quantum approximate optimization algorithm (QAOA)](https://learning.quantum.ibm.com/tutorial/quantum-approximate-optimization-algorithm) tutorial.\n",
+    "  - Try an example in the [Quantum approximate optimization algorithm (QAOA)](/docs/tutorials/quantum-approximate-optimization-algorithm) tutorial.\n",
     "  - Review the [Session API](/docs/api/qiskit-ibm-runtime/session) reference.\n",
     "  - Understand the [Job limits](/docs/guides/job-limits) when sending a job to an IBM&reg; QPU.\n",
     "</Admonition>"
