--- a/docs/guides/specify-observables-pauli.ipynb
+++ b/docs/guides/specify-observables-pauli.ipynb
@@ -254,7 +254,7 @@
     "## Next steps\n",
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
-    "  -  See an example of circuit decomposition in the [Variational quantum eigensolver](https://learning.quantum.ibm.com/tutorial/variational-quantum-eigensolver) tutorial.\n",
+    "  -  See an example of circuit decomposition in the [Variational quantum eigensolver](/docs/tutorials/variational-quantum-eigensolver) tutorial.\n",
     "  -  Read the [SparsePauliOp API](/docs/api/qiskit/qiskit.quantum_info.SparsePauliOp#sparsepauliop) reference.\n",
     "</Admonition>"
    ]
