--- a/docs/guides/transpile-rest-api.mdx
+++ b/docs/guides/transpile-rest-api.mdx
@@ -120,6 +120,6 @@ OPENQASM 3.0; include "stdgates.inc"; gate rzx_140040114706704(_gate_p_0) _gate_
 <Admonition type="tip" title="Recommendations">
     - Review detailed [Sampler and Estimator](./primitives-rest-api) primitives examples using REST API.
     - Read [Migrate to V2 primitives](/docs/migration-guides/v2-primitives).
-    - Practice with primitives by working through the [Cost function lesson](https://learning.quantum.ibm.com/course/variational-algorithm-design/cost-functions#primitives) in IBM Quantum Learning.
+    - Practice with primitives by working through the [Cost function lesson](/learning/en/courses/variational-algorithm-design/cost-functions) in IBM Quantum Learning.
     - Learn how to transpile locally in the [Transpile](./transpile) section.
 </Admonition>
