--- a/docs/guides/transpile.mdx
+++ b/docs/guides/transpile.mdx
@@ -58,8 +58,8 @@ For a simpler, but less customizable, "out-of-the-box" way to use the transpiler
 <Admonition type="tip" title="Recommendations">
     - To learn how to use the `generate_preset_passmanager` function, start with the [Transpilation default settings and configuration options](defaults-and-configuration-options) topic.
     - Continue learning about transpilation with the [Transpiler stages](transpiler-stages) topic.
-    - Try the [Submit transpiled circuits](https://learning.quantum.ibm.com/tutorial/submit-transpiled-circuits) tutorial.
-    - Try an end-to-end example that uses transpiled circuits in the [Variational quantum eigensolver (VQE)](https://learning.quantum.ibm.com/tutorial/variational-quantum-eigensolver) tutorial.
+    - Try the [Compare transpiler settings](/docs/tutorials/circuit-transpilation-settings#compare-transpiler-settings) tutorial.
+    - Try an end-to-end example that uses transpiled circuits in the [Variational quantum eigensolver (VQE)](/docs/tutorials/variational-quantum-eigensolver) tutorial.
     - See the [Transpile API documentation.](https://docs.quantum-computing.ibm.com/api/qiskit/transpiler)
-    - Learn [how to transpile circuits.](https://learning.quantum.ibm.com/tutorial/submit-transpiled-circuits)
+    - Learn [how to transpile circuits.](/docs/tutorials/circuit-transpilation-settings#compare-transpiler-settings)
 </Admonition>
