--- a/docs/guides/bit-ordering.ipynb
+++ b/docs/guides/bit-ordering.ipynb
@@ -364,7 +364,7 @@
     "## Next steps\n",
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
-    "  -  See an example of using circuits in the [Grover's Algorithm](https://learning.quantum.ibm.com/tutorial/grovers-algorithm) tutorial.\n",
+    "  -  See an example of using circuits in the [Grover's Algorithm](/docs/tutorials/grovers-algorithm) tutorial.\n",
     "  -  Explore the [QuantumCircuit API](/docs/api/qiskit/qiskit.circuit.QuantumCircuit#quantumcircuit-class) reference.\n",
     "</Admonition>"
    ]
