--- a/docs/guides/visualize-circuits.ipynb
+++ b/docs/guides/visualize-circuits.ipynb
@@ -453,7 +453,7 @@
     "## Next steps\n",
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
-    "  -  See an example of circuit visualization in the [Grover's Algorithm](https://learning.quantum.ibm.com/tutorial/grovers-algorithm) tutorial.\n",
+    "  -  See an example of circuit visualization in the [Grover's Algorithm](/docs/tutorials/grovers-algorithm) tutorial.\n",
     "  -  Visualize simple circuits in the [Explore gates and circuits with the Quantum Composer](https://learning.quantum.ibm.com/tutorial/explore-gates-and-circuits-with-the-quantum-composer) tutorial.\n",
     "  -  Review the [Qiskit visualizations API documentation](/docs/api/qiskit/visualization).\n",
     "</Admonition>"
