cost function lesson

--- a/docs/guides/primitives-rest-api.ipynb
+++ b/docs/guides/primitives-rest-api.ipynb
@@ -1009,7 +1009,7 @@
     "    - Learn how to [initialize your account](./setup-channel#set-up-to-use-ibm-quantum-platform-with-rest-api) with REST API.\n",
     "    - Learn how to [transpile circuits using REST API](./transpile-rest-api).\n",
     "    - Read [Migrate to V2 primitives](/docs/migration-guides/v2-primitives).\n",
-    "    - Practice with primitives by working through the [Cost function lesson](https://learning.quantum.ibm.com/course/variational-algorithm-design/cost-functions#primitives) in IBM Quantum Learning.\n",
+    "    - Practice with primitives by working through the [Cost function lesson](/learning/courses/variational-algorithm-design/cost-functions) in IBM Quantum Learning.\n",
     "    - Learn how to transpile locally in the [Transpile](./transpile) section.\n",
     "    - [Migrate to the Qiskit Runtime V2 primitives.](/docs/migration-guides/v2-primitives)\n",
     "</Admonition>\n",
@@ -1020,7 +1020,7 @@
     "    - Learn how to [initialize your account](./cloud-setup#set-up-to-use-ibm-quantum-platform-with-rest-api) with REST API.\n",
     "    - Learn how to [transpile circuits using REST API](./transpile-rest-api).\n",
     "    - Read [Migrate to V2 primitives](/docs/migration-guides/v2-primitives).\n",
-    "    - Practice with primitives by working through the [Cost function lesson](https://learning.quantum.ibm.com/course/variational-algorithm-design/cost-functions#primitives) in IBM Quantum Learning.\n",
+    "    - Practice with primitives by working through the [Cost function lesson](/learning/courses/variational-algorithm-design/cost-functions) in IBM Quantum Learning.\n",
     "    - Learn how to transpile locally in the [Transpile](./transpile) section.\n",
     "    - [Migrate to the Qiskit Runtime V2 primitives.](/docs/migration-guides/v2-primitives)\n",
     "</Admonition>\n",
