--- a/docs/guides/primitives.ipynb
+++ b/docs/guides/primitives.ipynb
@@ -245,7 +245,7 @@
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "    - Read [Get started with primitives](get-started-with-primitives) to implement primitives in your work.\n",
     "    - Review detailed [primitives examples.](primitives-examples)\n",
-    "    - Practice with primitives by working through the [Cost function lesson](https://learning.quantum.ibm.com/course/variational-algorithm-design/cost-functions#primitives) in IBM Quantum Learning.\n",
+    "    - Practice with primitives by working through the [Cost function lesson](/learning/courses/variational-algorithm-design/cost-functions) in IBM Quantum Learning.\n",
     "    - See the [EstimatorV2 API reference](/docs/api/qiskit-ibm-runtime/estimator-v2) and [SamplerV2 API reference](/docs/api/qiskit-ibm-runtime/sampler-v2).\n",
     "    - Read [Migrate to V2 primitives](/docs/migration-guides/v2-primitives).\n",
     "</Admonition>"
