--- a/docs/guides/primitives-examples.ipynb
+++ b/docs/guides/primitives-examples.ipynb
@@ -671,7 +671,7 @@
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "    - [Specify advanced runtime options.](runtime-options-overview)\n",
-    "    - Practice with primitives by working through the [Cost function lesson](https://learning.quantum.ibm.com/course/variational-algorithm-design/cost-functions#primitives) in IBM Quantum Learning.\n",
+    "    - Practice with primitives by working through the [Cost function lesson](/learning/courses/variational-algorithm-design/cost-functions) in IBM Quantum Learning.\n",
     "    - Learn how to transpile locally in the [Transpile](./transpile/) section.\n",
     "    - Try the [Submit pre-transpiled circuits](https://learning.quantum.ibm.com/tutorial/submitting-user-transpiled-circuits-using-primitives) tutorial.\n",
     "    - Read [Migrate to V2 primitives](/docs/migration-guides/v2-primitives).\n",
