--- a/docs/guides/ibm-circuit-function.ipynb
+++ b/docs/guides/ibm-circuit-function.ipynb
@@ -433,7 +433,7 @@
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "\n",
-    "- Try the [Building workflows with the IBM Circuit function](https://learning.quantum.ibm.com/tutorial/building-workflows-with-the-ibm-circuit-function) tutorial.\n",
+    "- Try the [Error mitigation with the IBM Circuit function](/docs/tutorials/error-mitigation-with-qiskit-functions) tutorial.\n",
     "\n",
     "</Admonition>"
    ]
