--- a/docs/guides/represent-quantum-computers.ipynb
+++ b/docs/guides/represent-quantum-computers.ipynb
@@ -494,7 +494,7 @@
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "    - Understand [Transpilation default settings and configuration options.](defaults-and-configuration-options)\n",
     "    - Review the [Commonly used parameters for transpilation](common-parameters) topic.\n",
-    "    - Try the [Submit transpiled circuits](https://learning.quantum.ibm.com/tutorial/submit-transpiled-circuits) tutorial.\n",
+    "    - Try the [Compare transpiler settings](/docs/tutorials/circuit-transpilation-settings#compare-transpiler-settings) tutorial.\n",
     "    - See the [Transpile API documentation.](/docs/api/qiskit/transpiler)\n",
     "</Admonition>"
    ]
