--- a/docs/guides/configure-qiskit-local.mdx
+++ b/docs/guides/configure-qiskit-local.mdx
@@ -56,6 +56,6 @@ Set these environment variables to alter the default behavior of Qiskit:
 <Admonition type="tip" title="Recommendations">
   - Learn how to [build circuits](./map-problem-to-circuits).
   - [Run the Hello world program](hello-world).
-  - Try a tutorial, such as [Grover's algorithm](https://learning.quantum.ibm.com/tutorial/grovers-algorithm).
+  - Try a tutorial, such as [Grover's algorithm](/docs/tutorials/grovers-algorithm).
   - Read the [contributing guidelines](https://github.com/Qiskit/qiskit/blob/main/CONTRIBUTING.md) if you want to contribute to the open-source Qiskit SDK.
 </Admonition>
