--- a/docs/tutorials/krylov-quantum-diagonalization.ipynb
+++ b/docs/tutorials/krylov-quantum-diagonalization.ipynb
@@ -871,9 +871,7 @@
    "outputs": [],
    "source": [
     "service = QiskitRuntimeService()\n",
-    "backend = service.least_busy(\n",
-    "    operational=True, simulator=False, min_num_qubits=156\n",
-    ")"
+    "backend = service.least_busy(operational=True, simulator=False)"
    ]
   },
   {
