--- a/docs/guides/setup-channel.mdx
+++ b/docs/guides/setup-channel.mdx
@@ -311,5 +311,5 @@ Alternatively, you can also access quantum processors with REST APIs, enabling y
 <Admonition type="tip" title="Recommendations">
   -  [Configure the Qiskit SDK locally.](configure-qiskit-local)
   -  Follow the steps in [Hello world](hello-world) to write and run a quantum program.
-  -  Try a [tutorial](https://learning.quantum.ibm.com/catalog/tutorials) in IBM Quantum Learning.
+  -  Try an [IBM Quantum Learning tutorial](/docs/tutorials).
 </Admonition>
