--- a/docs/guides/error-mitigation-and-suppression-techniques.ipynb
+++ b/docs/guides/error-mitigation-and-suppression-techniques.ipynb
@@ -321,7 +321,7 @@
    "source": [
     "## Next steps\n",
     "\n",
-    "- Check out the [tutorial](https://learning.quantum.ibm.com/tutorial/combine-error-mitigation-options-with-the-estimator-primitive) on combining error mitigation options with the Estimator primitive.\n",
+    "- Check out the [tutorial](/docs/tutorials/combine-error-mitigation-techniques) on combining error mitigation options with the Estimator primitive.\n",
     "- [Configure error mitigation.](configure-error-mitigation)\n",
     "- [Configure error suppression.](configure-error-suppression)\n",
     "- Explore other [options](runtime-options-overview) for the Qiskit Runtime primitives.\n",
