--- a/docs/guides/repetition-rate-execution.ipynb
+++ b/docs/guides/repetition-rate-execution.ipynb
@@ -72,7 +72,7 @@
     "## Next steps\n",
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
-    "  - Try an example in the [Quantum approximate optimization algorithm (QAOA)](https://learning.quantum.ibm.com/tutorial/quantum-approximate-optimization-algorithm) tutorial.\n",
+    "  - Try an example in the [Quantum approximate optimization algorithm (QAOA)](/docs/tutorials/quantum-approximate-optimization-algorithm) tutorial.\n",
     "  - Review how to [get started with primitives.](./get-started-with-primitives)\n",
     "</Admonition>"
    ]
