--- a/docs/guides/transpiler-stages.ipynb
+++ b/docs/guides/transpiler-stages.ipynb
@@ -471,7 +471,7 @@
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "    - To learn how to use the `generate_preset_passmanager` function, start with the [Transpilation default settings and configuration options](defaults-and-configuration-options) topic.\n",
     "    - Continue learning about transpilation with the [Transpiler with pass managers](transpile-with-pass-managers) topic.\n",
-    "    - Try the [Submit transpiled circuits](https://learning.quantum.ibm.com/tutorial/submit-transpiled-circuits) tutorial.\n",
+    "    - Try the [Compare transpiler settings](/docs/tutorials/circuit-transpilation-settings) tutorial.\n",
     "    - See the [Transpile API documentation.](https://docs.quantum-computing.ibm.com/api/qiskit/transpiler)\n",
     "</Admonition>"
    ]
