--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -8,7 +8,7 @@ in_page_toc_max_heading_level: 2
 
 # Latest updates
 
-*Last updated 19 June 2025*
+*Last updated 20 June 2025*
 
 {/* remember to update the date in the previous line each time this page is updated!!! */}
 
@@ -29,11 +29,11 @@ Jump to [Qiskit SDK](#latest-qiskit-sdk) | [Qiskit Runtime client](#latest-qiski
 
 This section summarizes the recent enhancements and new features for the new [IBM Quantum Platform.](https://quantum.cloud.ibm.com/)
 
-**19 June 2025**
+**20 June 2025**
 
 - Profile page: Now you can find integrated profile details directly in the new platform. Find your profile by clicking on the profile icon in the top right or visiting your [profile page.](https://quantum.cloud.ibm.com/profile)
 - Public backends: View a list of US backends without logging in, available on the updated [Compute Resources](https://quantum.cloud.ibm.com/computers) page.
-- Learning: Quantum computing courses have now been released in the upgraded platform, along with new educational modules designed to help teachers bring Qiskit into their classrooms. This is the first step towards migrating IBM Quantum Learning to the new platform, with more resources - including the Circuit Composer, which will be released in the coming weeks. Resources can be accessed without needing to log in at [IBM Quantum Learning.](/learning)
+- Learning: Quantum computing courses have now been released in the upgraded platform, along with new educational modules designed to help teachers bring Qiskit into their classrooms. This is the first step towards migrating IBM Quantum Learning to the new platform, with more resources - including the IBM Quantum Composer, which will be released in the coming weeks. Resources can be accessed without needing to log in at [IBM Quantum Learning.](/learning) Check out new and updated content, including [Quantum diagonalization algorithms](/learning/courses/quantum-diagonalization-algorithms), Qiskit in Classrooms modules like [Quantum mechanics](/learning/modules/quantum-mechanics) and [Computer science](/learning/modules/computer-science), and [Quantum computing in practice](/learning/courses/quantum-computing-in-practice).
 - Announcements: Announcements have been migrated to the new platform. Click the bell icon in the top navigation bar or visit the [Announcements](/announcements) page.
 
 <details>
