Add latest updates to the platform (#3387)

--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -8,7 +8,7 @@ in_page_toc_max_heading_level: 2
 
 # Latest updates
 
-*Last updated 9 June 2025*
+*Last updated 20 June 2025*
 
 {/* remember to update the date in the previous line each time this page is updated!!! */}
 
@@ -29,6 +29,16 @@ Jump to [Qiskit SDK](#latest-qiskit-sdk) | [Qiskit Runtime client](#latest-qiski
 
 This section summarizes the recent enhancements and new features for the new [IBM Quantum Platform.](https://quantum.cloud.ibm.com/)
 
+**20 June 2025**
+
+- Profile page: Now you can find integrated profile details directly in the new platform. Find your profile by clicking on the profile icon in the top right or visiting your [profile page.](https://quantum.cloud.ibm.com/profile)
+- Public backends: View a list of US backends without logging in, available on the updated [Compute Resources](https://quantum.cloud.ibm.com/computers) page.
+- Learning: Quantum computing courses have now been released in the upgraded platform, along with new educational modules designed to help teachers bring Qiskit into their classrooms. This is the first step towards migrating IBM Quantum Learning to the new platform, with more resources - including the IBM Quantum Composer, which will be released in the coming weeks. Resources can be accessed without needing to log in at [IBM Quantum Learning.](/learning) Check out new and updated content, including [Quantum diagonalization algorithms](/learning/courses/quantum-diagonalization-algorithms), Qiskit in Classrooms modules like [Quantum mechanics](/learning/modules/quantum-mechanics) and [Computer science](/learning/modules/computer-science), and [Quantum computing in practice](/learning/courses/quantum-computing-in-practice).
+- Announcements: Announcements have been migrated to the new platform. Click the bell icon in the top navigation bar or visit the [Announcements](/announcements) page.
+
+<details>
+<summary><b>Previous updates</b></summary>
+
 **5 June 2025**
 
 - Added instance job filter: The platform now displays only your workloads by default. On the dashboard, you will see only the latest workloads you have submitted to instances within your account.
@@ -40,9 +50,6 @@ This section summarizes the recent enhancements and new features for the new [IB
   - A new channel for the platform that makes instance selection optional, which simplifies account setup and backend access by automatically checking all available instances. This update benefits users who manage multiple instances or prefer a streamlined workflow without specifying instance details each time. Developers and researchers working across various projects with different levels of access and multiple backends will find this especially helpful.
 
   See the [Runtime Client v0.40.0](#latest-qiskit-runtime) section for more information. {/* When next Runtime release overwrites the .40 section below, remove this link and replace with direct link to release notes */}
-
-<details>
-<summary><b>Previous updates</b></summary>
 
 **8 May 2025**
 
