--- a/docs/tutorials/krylov-quantum-diagonalization.ipynb
+++ b/docs/tutorials/krylov-quantum-diagonalization.ipynb
@@ -871,9 +871,7 @@
    "outputs": [],
    "source": [
     "service = QiskitRuntimeService()\n",
-    "backend = service.least_busy(\n",
-    "    operational=True, simulator=False, min_num_qubits=127\n",
-    ")"
+    "backend = service.least_busy(operational=True, simulator=False)"
    ]
   },
   {
@@ -910,7 +908,8 @@
     "                    continue\n",
     "\n",
     "for q in cmap_list:\n",
-    "    twoq_gate_err = target[\"cz\"][q].error\n",
+    "    op_name = list(target.operation_names_for_qargs(q))[0]\n",
+    "    twoq_gate_err = target[op_name][q].error\n",
     "    if twoq_gate_err > 0.015:\n",
     "        for q_pair in cmap_list:\n",
     "            if q == q_pair:\n",
