--- a/docs/guides/composer.mdx
+++ b/docs/guides/composer.mdx
@@ -51,7 +51,7 @@ IBM Quantum Composer has a customizable set of tools that allow you to build, vi
 
 6. **Visualizations** - Visualizations characterize your circuit as you build it. They use a single-shot statevector simulator, which is different from the system specified in the Run circuit settings. Note that the visualizations ignore any measurement operations you add. Sign in and click **Run circuit** to get results from the specified backend instead.
 
-   To learn about the visualizations, see [Visualizations](#visualizations).
+   Learn more in the [Visualizations](#visualizations) section.
 
 ## Build, edit, and inspect quantum circuits
 
